Bug 574430: In nsTextEditorState.cpp, move helper-class declaration outside of function-bodies to fix GCC warnings. r=jst